having flex wrap bug

--- a/styles/components/_section3.scss
+++ b/styles/components/_section3.scss
@@ -15,6 +15,7 @@
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    max-width: 100%;
                 }
                 .box1{
                     width: 30%;
@@ -108,6 +109,8 @@
     body{
         main{
             .section3{
+                display: flex;
+                flex-wrap: wrap;
                 .box{
                     display: flex;
                     flex-wrap: wrap;
