--- a/styles/index.css
+++ b/styles/index.css
@@ -256,6 +256,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 100%;
 }
 * body main .section3 .box1 {
   width: 30%;
@@ -328,6 +329,10 @@
   }
 }
 @media screen and (max-width: 700px) {
+  body main .section3 {
+    display: flex;
+    flex-wrap: wrap;
+  }
   body main .section3 .box {
     display: flex;
     flex-wrap: wrap;
